--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,5 @@
 /* 
-  NLIPL - Namakkal Logistics India P Ltd
+  NLIPL - Namakkal Logistics India (P) Ltd
   Modern, clean design inspired by rivianvw.tech
 */
 
