--- a/templates/index.html
+++ b/templates/index.html
@@ -113,7 +113,7 @@
                         </div>
                         <div class="feature">
                             <div class="feature-icon">✓</div>
-                            <span>Pan-India Network</span>
+                            <span>Nation-wide Network</span>
                         </div>
                         <div class="feature">
                             <div class="feature-icon">✓</div>
@@ -294,7 +294,7 @@
                         <div class="location-dot dot-1">🔵</div>
                         <div class="location-dot dot-2">🔴</div>
                         <div class="location-dot dot-3">🟢</div>
-                        <div class="map-label">Pan-India Network</div>
+                        <div class="map-label">Nation-wide Network</div>
                     </div>
                 </div>
             </div>
