--- a/templates/index.html
+++ b/templates/index.html
@@ -109,7 +109,7 @@
                     <div class="about-features">
                         <div class="feature">
                             <div class="feature-icon">✓</div>
-                            <span>Bank Approved Operator</span>
+                            <span>IBA Approved Operator</span>
                         </div>
                         <div class="feature">
                             <div class="feature-icon">✓</div>
