--- a/templates/index.html
+++ b/templates/index.html
@@ -109,7 +109,7 @@
                     <div class="about-features">
                         <div class="feature">
                             <div class="feature-icon">✓</div>
-                            <span>IBA Approved Operator</span>
+                            <span>IBA Approved Logistics</span>
                         </div>
                         <div class="feature">
                             <div class="feature-icon">✓</div>
@@ -337,9 +337,15 @@
                 </div>
                 <div class="contact-form-wrapper">
                     <form id="contactForm" class="contact-form">
-                        <div class="form-group">
-                            <label for="name">Full Name</label>
-                            <input type="text" id="name" name="name" required placeholder="Your name">
+                        <div class="form-row">
+                            <div class="form-group">
+                                <label for="name">Full Name</label>
+                                <input type="text" id="name" name="name" required placeholder="Your name">
+                            </div>
+                            <div class="form-group">
+                                <label for="company">Company Name</label>
+                                <input type="text" id="company" name="company" placeholder="Your company">
+                            </div>
                         </div>
                         <div class="form-row">
                             <div class="form-group">
