--- a/templates/index.html
+++ b/templates/index.html
@@ -27,8 +27,14 @@
             </a>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#leadership">Leadership</a></li>
+                <li class="nav-dropdown">
+                    <a href="#about">About</a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#about">About Us</a></li>
+                        <li><a href="#leadership">Leadership</a></li>
+                        <li><a href="#team">Meet the Team</a></li>
+                    </ul>
+                </li>
                 <li><a href="#services">Services</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
